--- a/css/style-zymafluor.css
+++ b/css/style-zymafluor.css
@@ -277,3 +277,64 @@ footer{
     font-family: 13px/1.4em "Arial";
     text-align: center;
 }
+
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 769px){
+    .price-zymafluor{
+        float: none;
+    }
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 75px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 4px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 95px 10px 0;
+    }
+    .column{
+        margin: 15px 14px 0 180px;
+    }
+    .tel::before {
+        top: 20px;
+    }
+    .foto{
+        max-width: 260px;
+    }
+    h1,
+    h2{
+        font-size: 22px;
+    }
+}
+@media screen and (max-width: 376px){
+    .column{
+        margin: 15px 14px 0 129px;
+    }
+}
+@media screen and (max-width: 321px){
+    .column{
+        margin: 15px 14px 0 75px;
+    }
+    .stock{
+        display: inline-block;
+    }
+}
