--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -156,7 +156,7 @@ hr{
 .tel-bottom::before{
     position: absolute;
     left: -28px;
-    top: 2px;
+    top: 45px;
     content: url(../img/telefone.png);
 }
 .url:hover,
@@ -168,7 +168,7 @@ hr{
 .url::before{
     position: absolute;
     left: -30px;
-    top: 1px;
+    top: 40px;
     content: url(../img/url.png);
 }
 p.url-chat{
@@ -176,7 +176,7 @@ p.url-chat{
 }
 .url-chat a::before{
     position: absolute;
-    left: 265px;
+    left: 250px;
     top: -2px;
     content: url(../img/url.png);
 }
@@ -189,7 +189,7 @@ p.url-chat{
 }
 .viber-chat a::before{
     position: absolute;
-    left: 335px;
+    left: 320px;
     bottom: 40px;
     content: url(../img/viber3.png);
 }
@@ -197,7 +197,7 @@ footer{
     background-color: #ededf5;
 }
 .top{
-    margin-top: 40px;
+    padding-top: 40px;
 }
 .logotipe-bottom{
     margin-right: 35px;
@@ -217,7 +217,7 @@ footer{
     margin-left: 17px;
 }
 .basic-inf{
-    padding: 0;
+    padding: 40px 0 0 0;
     list-style: none;
 }
 .basic-inf a{
@@ -253,7 +253,7 @@ footer{
         padding: 15px 210px 10px 0;
     }
     .tel::before{
-        top: 4px;
+        top: 20px;
     }
 }
 @media screen and (max-width: 650px){
@@ -286,5 +286,13 @@ footer{
     }
     .viber-chat a::before {
         left: 73px;
+    }
+}@media screen and (max-width: 360px){
+    .main{
+        font-size: 15px;
+    }
+    .viber-chat a::before{
+        right: 34px;
+        left: 0;
     }
 }
