--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -21,19 +21,19 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 10px;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -43,13 +43,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -156,7 +159,6 @@ hr{
 .tel-bottom::before{
     position: absolute;
     left: -28px;
-    top: 45px;
     content: url(../img/telefone.png);
 }
 .url:hover,
@@ -168,7 +170,7 @@ hr{
 .url::before{
     position: absolute;
     left: -30px;
-    top: 40px;
+    top: 0;
     content: url(../img/url.png);
 }
 p.url-chat{
@@ -176,7 +178,7 @@ p.url-chat{
 }
 .url-chat a::before{
     position: absolute;
-    left: 250px;
+    left: 265px;
     top: -2px;
     content: url(../img/url.png);
 }
@@ -184,23 +186,17 @@ p.url-chat{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .viber-chat a::before{
     position: absolute;
-    left: 320px;
+    left: 340px;
     bottom: 40px;
     content: url(../img/viber3.png);
 }
 footer{
     background-color: #ededf5;
-}
-.top{
-    padding-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -213,11 +209,8 @@ footer{
 .phone-bottom p{
     margin: 0;
 }
-.basic-inf:first-child{
-    margin-left: 17px;
-}
 .basic-inf{
-    padding: 40px 0 0 0;
+    padding: 0;
     list-style: none;
 }
 .basic-inf a{
@@ -247,7 +240,7 @@ footer{
 }
 @media screen and (max-width: 705px){
     .navigation{
-        padding: 15px 15px 0 75px;
+        padding: 15px 15px 0 40px;
     }
     .phone{
         padding: 15px 210px 10px 0;
@@ -266,33 +259,32 @@ footer{
 }
 @media screen and (max-width: 426px){
     .phone{
-        padding: 15px 95px 10px 0;
-    }
-    .column{
-        margin: 15px 14px 0 141px;
+        padding: 15px 50px 10px 0;
     }
     .tel::before {
         top: 20px;
     }
 }
-@media screen and (max-width: 376px){
-    .column{
-        margin: 15px 14px 0 62px;
-    }
-}
-@media screen and (max-width: 321px){
-    .column{
-        margin: 15px 14px 0 10px;
+@media screen and (max-width: 365px){
+    .viber-chat a{
+        display: block;
     }
     .viber-chat a::before {
-        left: 73px;
+        bottom: 40px;
+        left: 235px;
     }
-}@media screen and (max-width: 360px){
+}
+@media screen and (max-width: 360px){
     .main{
         font-size: 15px;
     }
-    .viber-chat a::before{
-        right: 34px;
-        left: 0;
+}
+@media screen and (max-width: 321px){
+    .viber-chat a::before {
+        bottom: 38px;
+        left: 225px;
+    }
+    .url-chat a::before{
+        left: 250px;
     }
 }
