--- a/css/style-cytotec.css
+++ b/css/style-cytotec.css
@@ -20,19 +20,19 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 0;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -42,13 +42,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -165,14 +168,13 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .foto-cytotec,
 .price-cytotec{
     max-width: 100%;
     display: inline-block;
-    padding-left: 40px;
 }
 .price-cytotec{
     padding-right: 20px;
@@ -181,8 +183,10 @@ hr{
     max-width: 500px;
 
 }
-.price-cytotec{
-    float: right;
+.main-price{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .phone-price{
     text-decoration: none;
@@ -241,12 +245,6 @@ hr{
 footer{
     background-color: #ededf5;
 }
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
-}
 .footer-top .column{
     vertical-align: top;
 }
@@ -290,14 +288,9 @@ footer{
         justify-content: space-around;
     }
 }
-@media screen and (max-width: 769px){
-    .price-cytotec{
-        float: none;
-    }
-}
 @media screen and (max-width: 705px){
     .navigation{
-        padding: 15px 15px 0 75px;
+        padding: 15px 15px 0 40px;
     }
     .phone{
         padding: 15px 210px 10px 0;
@@ -314,29 +307,31 @@ footer{
         padding-right: 60px;
     }
 }
+@media screen and (max-width: 521px){
+    .foto{
+        max-width: 400px;
+    }
+}
 @media screen and (max-width: 426px){
     .phone{
-        padding: 15px 95px 10px 0;
-    }
-    .column{
-        margin: 15px 14px 0 141px;
+        padding: 15px 50px 10px 0;
     }
     .tel::before {
         top: 20px;
+    }
+    h1,
+    h2,
+    h3{
+        font-size: 20px;
+    }
+    .prod{
+        font-size: 18px;
     }
     .foto{
         max-width: 260px;
     }
 }
-@media screen and (max-width: 376px){
-    .column{
-        margin: 15px 14px 0 62px;
-    }
-}
 @media screen and (max-width: 321px){
-    .column{
-        margin: 15px 14px 0 10px;
-    }
     .stock{
         display: inline-block;
     }
