--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,16 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
     padding: 30px 0 30px 0;
@@ -44,13 +44,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -167,7 +170,7 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .main-center{
@@ -229,6 +232,8 @@ hr{
     max-width: 100%;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .medics h2{
     font-size: 14px;
@@ -236,10 +241,6 @@ hr{
 .iruxol,
 .colchicine,
 .zarontin{
-    margin: 0 auto;
-    max-width: 25%;
-    display: inline-block;
-    vertical-align: top;
     border: 1px solid black;
 }
 .iruxol img,
@@ -248,7 +249,6 @@ hr{
     max-width: 100%;
     
 }
-
 .ret{
     text-align: center;
 }
@@ -273,12 +273,6 @@ hr{
 
 footer{
     background-color: #ededf5;
-}
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -324,7 +318,7 @@ footer{
 }
 @media screen and (max-width: 705px){
     .navigation{
-        padding: 15px 15px 0 75px;
+        padding: 15px 15px 0 40px;
     }
     .phone{
         padding: 15px 210px 10px 0;
@@ -343,22 +337,9 @@ footer{
 }
 @media screen and (max-width: 426px){
     .phone{
-        padding: 15px 95px 10px 0;
-    }
-    .column{
-        margin: 15px 14px 0 141px;
+        padding: 15px 50px 10px 0;
     }
     .tel::before {
         top: 20px;
-    }
-}
-@media screen and (max-width: 376px){
-    .column{
-        margin: 15px 14px 0 62px;
-    }
-}
-@media screen and (max-width: 321px){
-    .column{
-        margin: 15px 14px 0 10px;
     }
 }
