--- a/rus/css/style-colchicine.css
+++ b/rus/css/style-colchicine.css
@@ -20,19 +20,19 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 0;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -42,13 +42,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -165,23 +168,25 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .foto-colchicine,
 .price-colchicine{
     max-width: 100%;
     display: inline-block;
-    padding-left: 40px;
 }
 .price-colchicine{
     padding-right: 20px;
 }
 .foto{
-    max-width: 100%;
+    max-width: 500px;
+
 }
-.price-colchicine{
-    float: right;
+.main-price{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .phone-price{
     text-decoration: none;
@@ -230,16 +235,8 @@ hr{
     bottom: -7px;
     right: -28px;
 }
-
-
 footer{
     background-color: #ededf5;
-}
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -277,4 +274,58 @@ footer{
     color: #9999a6;
     font-family: 13px/1.4em "Arial";
     text-align: center;
+}
+
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 40px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 4px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 521px){
+    .foto{
+        max-width: 400px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 50px 10px 0;
+    }
+    .tel::before {
+        top: 20px;
+    }
+    h1,
+    h2,
+    h3{
+        font-size: 20px;
+    }
+    .prod{
+        font-size: 18px;
+    }
+    .foto{
+        max-width: 260px;
+    }
+}
+@media screen and (max-width: 321px){
+    .stock{
+        display: inline-block;
+    }
 }
