--- a/rus/css/style-contact.css
+++ b/rus/css/style-contact.css
@@ -21,19 +21,19 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 10px;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -43,13 +43,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -156,7 +159,6 @@ hr{
 .tel-bottom::before{
     position: absolute;
     left: -28px;
-    top: 2px;
     content: url(../img/telefone.png);
 }
 .url:hover,
@@ -168,7 +170,7 @@ hr{
 .url::before{
     position: absolute;
     left: -30px;
-    top: 1px;
+    top: 0;
     content: url(../img/url.png);
 }
 p.url-chat{
@@ -184,23 +186,17 @@ p.url-chat{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .viber-chat a::before{
     position: absolute;
-    left: 335px;
+    left: 340px;
     bottom: 40px;
     content: url(../img/viber3.png);
 }
 footer{
     background-color: #ededf5;
-}
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -212,9 +208,6 @@ footer{
 .phone p,
 .phone-bottom p{
     margin: 0;
-}
-.basic-inf:first-child{
-    margin-left: 17px;
 }
 .basic-inf{
     padding: 0;
@@ -238,4 +231,60 @@ footer{
     color: #9999a6;
     font-family: 13px/1.4em "Arial";
     text-align: center;
+}
+
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 40px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 20px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 50px 10px 0;
+    }
+    .tel::before {
+        top: 20px;
+    }
+}
+@media screen and (max-width: 365px){
+    .viber-chat a{
+        display: block;
+    }
+    .viber-chat a::before {
+        bottom: 40px;
+        left: 235px;
+    }
+}
+@media screen and (max-width: 360px){
+    .main{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 321px){
+    .viber-chat a::before {
+        bottom: 38px;
+        left: 225px;
+    }
+    .url-chat a::before{
+        left: 250px;
+    }
 }
