--- a/rus/css/style-cytotec.css
+++ b/rus/css/style-cytotec.css
@@ -5,16 +5,14 @@ body{
 sup{
     font-size: 0.55em;
 }
-h1{
-    text-align: center;
-    font-size: 28px;
-}
+h1,
 h2{
     margin: 0 10px 30px 60px;
     font-size: 28px;
 }
 h3{
     display: inline-block;
+    font-size: 28px;
 }
 hr{
     border: 1px solid #e4e4ec;
@@ -22,19 +20,19 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 0;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -44,13 +42,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -167,14 +168,13 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .foto-cytotec,
 .price-cytotec{
     max-width: 100%;
     display: inline-block;
-    padding-left: 40px;
 }
 .price-cytotec{
     padding-right: 20px;
@@ -183,8 +183,10 @@ hr{
     max-width: 500px;
 
 }
-.price-cytotec{
-    float: right;
+.main-price{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .phone-price{
     text-decoration: none;
@@ -243,12 +245,6 @@ hr{
 footer{
     background-color: #ededf5;
 }
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
-}
 .footer-top .column{
     vertical-align: top;
 }
@@ -285,4 +281,58 @@ footer{
     color: #9999a6;
     font-family: 13px/1.4em "Arial";
     text-align: center;
+}
+
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 40px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 4px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 521px){
+    .foto{
+        max-width: 400px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 50px 10px 0;
+    }
+    .tel::before {
+        top: 20px;
+    }
+    h1,
+    h2,
+    h3{
+        font-size: 20px;
+    }
+    .prod{
+        font-size: 18px;
+    }
+    .foto{
+        max-width: 260px;
+    }
+}
+@media screen and (max-width: 321px){
+    .stock{
+        display: inline-block;
+    }
 }
