--- a/rus/css/style-medics.css
+++ b/rus/css/style-medics.css
@@ -1,4 +1,5 @@
 body{
+    max-width: 100%;
     margin: 0;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
@@ -11,6 +12,7 @@ h1{
 }
 h2{
     display: inline-block;
+    margin-top: 0;
 }
 hr{
     border: 1px solid #e4e4ec;
@@ -18,16 +20,16 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
     padding: 30px 0 30px 0;
@@ -40,13 +42,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -163,7 +168,7 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
 }
 .main-top h2{
@@ -225,6 +230,9 @@ hr{
 .nicetile-tab-price{
     color: black;
 }
+img{
+    max-width: 100%;
+}
 .zarontin-info p,
 .colchicine-info p,
 .iruxol-info p,
@@ -239,7 +247,7 @@ hr{
 .cytotec-price,
 .zymafluor-price,
 .nicetile-tab-price{
-    max-width: 300px;
+    max-width: 250px;
     display: inline-block;
 }
 .iruxol-info{
@@ -254,21 +262,11 @@ hr{
     display:  inline-block;
 }
 .zym{
-    max-width: 225px;
+    max-width: 250px;
     display:  inline-block;
 }
-
-
-
-
 footer{
     background-color: #ededf5;
-}
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -306,4 +304,48 @@ footer{
     color: #9999a6;
     font-family: 13px/1.4em "Arial";
     text-align: center;
+}
+
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 919px){
+    
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 40px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 4px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 50px 10px 0;
+    }
+    .tel::before {
+        top: 20px;
+    }
+    .zymafluor{
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 321px){
+    .zymafluor{
+        font-size: 12px;
+    }
 }
