--- a/rus/css/style.css
+++ b/rus/css/style.css
@@ -22,16 +22,16 @@ hr{
     border-left: none;
     border-right: none;
 }
-.clear::after{
-    content: "";
-    display: block;
-    clear: both;
+.nav-top{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .wrapper-fon{
     position: relative;
     margin: 0 auto;
     max-width: 1150px;
-    padding: 0 20px 0 20px;
+    padding: 0 15px 0 40px;
 }
 .wrapper{
     padding: 30px 0 30px 0;
@@ -44,13 +44,16 @@ hr{
     max-width: 1150px;
 }
 .row{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 -14px;
     font-size: 0;
     text-align: center;
 }
 .column{
     display: inline-block;
-    margin: 0 14px;
+    margin: 15px 14px;
     vertical-align: middle;
     width: 219px;
     font-size: 14px;
@@ -167,8 +170,13 @@ hr{
     position: absolute;
     size: 1px;
     left: -30px;
-    bottom: 8px;
+    top: 32px;
     content: url(../img/viber3.png);
+}
+.main-center{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .main-center p{
     font: 16px/1.7em "Arial";
@@ -224,6 +232,8 @@ hr{
     max-width: 100%;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .medics h2{
     font-size: 14px;
@@ -231,10 +241,6 @@ hr{
 .iruxol,
 .colchicine,
 .zarontin{
-    margin: 0 auto;
-    max-width: 25%;
-    display: inline-block;
-    vertical-align: top;
     border: 1px solid black;
 }
 .iruxol img,
@@ -243,7 +249,6 @@ hr{
     max-width: 100%;
     
 }
-
 .ret{
     text-align: center;
 }
@@ -268,12 +273,6 @@ hr{
 
 footer{
     background-color: #ededf5;
-}
-.top{
-    margin-top: 40px;
-}
-.logotipe-bottom{
-    margin-right: 35px;
 }
 .footer-top .column{
     vertical-align: top;
@@ -311,4 +310,36 @@ footer{
     color: #9999a6;
     font-family: 13px/1.4em "Arial";
     text-align: center;
+}
+@media screen and (max-width: 1024px){
+    .main-center{
+        justify-content: space-around;
+    }
+}
+@media screen and (max-width: 705px){
+    .navigation{
+        padding: 15px 15px 0 40px;
+    }
+    .phone{
+        padding: 15px 210px 10px 0;
+    }
+    .tel::before{
+        top: 4px;
+    }
+}
+@media screen and (max-width: 650px){
+    .navigation{
+        text-align: center;
+    }
+    .logotipe{
+        padding-right: 60px;
+    }
+}
+@media screen and (max-width: 426px){
+    .phone{
+        padding: 15px 50px 10px 0;
+    }
+    .tel::before {
+        top: 20px;
+    }
 }
