--- a/css/style-zymafluor.css
+++ b/css/style-zymafluor.css
@@ -198,6 +198,7 @@ hr{
 }
 .block{
     display: block;
+    margin: 15px 0;
 }
 .price{
     margin-top: 0;
@@ -231,7 +232,7 @@ hr{
 }
 .prod b::before{
     position: absolute;
-    content: url(../img/italy.png);
+    content: url(../img/germany.png);
     bottom: -7px;
     right: -28px;
 }
@@ -322,6 +323,11 @@ footer{
     }
     .foto{
         max-width: 260px;
+    }
+}
+@media screen and (max-width: 341px){
+    .prod{
+        padding-left: 33px;
     }
 }
 @media screen and (max-width: 321px){
