--- a/rus/css/style-medics.css
+++ b/rus/css/style-medics.css
@@ -192,7 +192,13 @@ hr{
 .iruxol,
 .cytotec,
 .zymafluor,
-.nicetile-tab{
+.nicetile-tab,
+.plavix,
+.methergin,
+.ultraproct-sup,
+.ultraproct-ung,
+.daivonex-ung,
+.advantan-crema{
     margin-bottom: 20px;
     padding-left: 15px;
     border: 2px solid #9999a6;
@@ -202,7 +208,13 @@ hr{
 .iruxol:hover,
 .cytotec:hover,
 .zymafluor:hover,
-.nicetile-tab:hover{
+.nicetile-tab:hover,
+.plavix:hover,
+.methergin:hover,
+.ultraproct-sup:hover,
+.ultraproct-ung:hover,
+.daivonex-ung:hover,
+.advantan-crema:hover{
     filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.15));
     border: 2px solid #3e6aff;
 }
@@ -211,7 +223,13 @@ hr{
 .iruxol-info,
 .cytotec-info,
 .zymafluor-info,
-.nicetile-tab-info{
+.nicetile-tab-info,
+.plavix-info,
+.methergin-info,
+.ultraproct-sup-info,
+.ultraproct-ung-info,
+.daivonex-ung-info,
+.advantan-crema-info{
     max-width: 755px;
     display: inline-block;
     margin-right: 15px;
@@ -227,7 +245,19 @@ hr{
 .zymafluor-info,
 .zymafluor-price,
 .nicetile-tab-info,
-.nicetile-tab-price{
+.nicetile-tab-price,
+.plavix-info,
+.plavix-price,
+.methergin-info,
+.methergin-price,
+.ultraproct-sup-info,
+.ultraproct-sup-price,
+.ultraproct-ung-info,
+.ultraproct-ung-price,
+.daivonex-ung-info,
+.daivonex-ung-price,
+.advantan-crema-info,
+.advantan-crema-price{
     color: black;
 }
 img{
@@ -238,7 +268,13 @@ img{
 .iruxol-info p,
 .cytotec-info p,
 .zymafluor-info p,
-.nicetile-tab-info p{
+.nicetile-tab-info p,
+.plavix-info p,
+.methergin-info p,
+.ultraproct-sup-info p,
+.ultraproct-ung-info p,
+.daivonex-ung-info p,
+.advantan-crema-info p{
     margin-top: 0;
 }
 .zarontin-price,
@@ -246,7 +282,13 @@ img{
 .iruxol-price,
 .cytotec-price,
 .zymafluor-price,
-.nicetile-tab-price{
+.nicetile-tab-price,
+.plavix-price,
+.methergin-price,
+.ultraproct-sup-price,
+.ultraproct-ung-price,
+.daivonex-ung-price,
+.advantan-crema-price{
     max-width: 250px;
     display: inline-block;
 }
@@ -261,7 +303,9 @@ img{
     max-width: 250px;
     display:  inline-block;
 }
-.zym{
+.zym,
+.pol,
+.met{
     max-width: 250px;
     display:  inline-block;
 }
@@ -341,7 +385,10 @@ footer{
         top: 20px;
     }
     .zymafluor{
-        font-size: 13px;
+        font-size: 14px;
+    }
+    .methergin{
+        font-size: 14px;
     }
 }
 @media screen and (max-width: 321px){
