--- a/rus/css/style-zymafluor.css
+++ b/rus/css/style-zymafluor.css
@@ -198,6 +198,7 @@ hr{
 }
 .block{
     display: block;
+    margin: 15px 0;
 }
 .price{
     margin-top: 0;
@@ -231,7 +232,7 @@ hr{
 }
 .prod b::before{
     position: absolute;
-    content: url(../img/italy.png);
+    content: url(../img/germany.png);
     bottom: -7px;
     right: -28px;
 }
@@ -309,9 +310,6 @@ footer{
     .phone{
         padding: 15px 50px 10px 0;
     }
-    .tel::before {
-        top: 20px;
-    }
     h1,
     h2,
     h3{
@@ -320,8 +318,16 @@ footer{
     .prod{
         font-size: 18px;
     }
+    .tel::before {
+        top: 20px;
+    }
     .foto{
         max-width: 260px;
+    }
+}
+@media screen and (max-width: 341px){
+    .prod{
+        padding-left: 33px;
     }
 }
 @media screen and (max-width: 321px){
