--- a/rus/css/style-advantan.css
+++ b/rus/css/style-advantan.css
@@ -1,18 +1,18 @@
 body{
-    max-width: 100%;
     margin: 0;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 sup{
     font-size: 0.55em;
 }
-h1{
-    text-align: center;
+h1,
+h2{
+    margin: 0 10px 30px 60px;
     font-size: 28px;
 }
-h2{
+h3{
     display: inline-block;
-    margin-top: 0;
+    font-size: 28px;
 }
 hr{
     border: 1px solid #e4e4ec;
@@ -32,7 +32,7 @@ hr{
     padding: 0 15px 0 40px;
 }
 .wrapper{
-    padding: 30px 0 30px 0;
+    padding: 30px 15px;
     position: relative;
     margin: 0 auto;
     max-width: 1100px;
@@ -171,150 +171,70 @@ hr{
     top: 32px;
     content: url(../img/viber3.png);
 }
-.main-top h2{
-    padding-top: 20px;
-}
-.main-center a{
-    text-decoration: none;
-}
-.main-center h3{
-    display: inline-block;
-}
-.detal-inf{
-    text-decoration: none;
-    color: #000;
-}
-.detal-inf:hover{
-    color: #fd8300;
-}
-.zarontin,
-.colchicine,
-.iruxol,
-.cytotec,
-.zymafluor,
-.nicetile-tab,
-.plavix,
-.methergin,
-.ultraproct-sup,
-.ultraproct-ung,
-.daivonex-ung,
-.advantan-crema,
-.crestor{
-    margin-bottom: 20px;
-    padding-left: 15px;
-    border: 2px solid #9999a6;
-}
-.zarontin:hover,
-.colchicine:hover,
-.iruxol:hover,
-.cytotec:hover,
-.zymafluor:hover,
-.nicetile-tab:hover,
-.plavix:hover,
-.methergin:hover,
-.ultraproct-sup:hover,
-.ultraproct-ung:hover,
-.daivonex-ung:hover,
-.advantan-crema:hover,
-.crestor:hover{
-    filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.15));
-    border: 2px solid #3e6aff;
-}
-.zarontin-info,
-.colchicine-info,
-.iruxol-info,
-.cytotec-info,
-.zymafluor-info,
-.nicetile-tab-info,
-.plavix-info,
-.methergin-info,
-.ultraproct-sup-info,
-.ultraproct-ung-info,
-.daivonex-ung-info,
-.advantan-crema-info,
-.crestor-info{
-    max-width: 755px;
-    display: inline-block;
-    margin-right: 15px;
-}
-.zarontin-info,
-.zarontin-price,
-.colchicine-info,
-.colchicine-price,
-.iruxol-info,
-.iruxol-price,
-.cytotec-info,
-.cytotec-price,
-.zymafluor-info,
-.zymafluor-price,
-.nicetile-tab-info,
-.nicetile-tab-price,
-.plavix-info,
-.plavix-price,
-.methergin-info,
-.methergin-price,
-.ultraproct-sup-info,
-.ultraproct-sup-price,
-.ultraproct-ung-info,
-.ultraproct-ung-price,
-.daivonex-ung-info,
-.daivonex-ung-price,
-.advantan-crema-info,
-.advantan-crema-price,
-.crestor-info,
-.crestor-price{
-    color: black;
-}
-img{
+.foto-advantan,
+.price-advantan{
     max-width: 100%;
-}
-.zarontin-info p,
-.colchicine-info p,
-.iruxol-info p,
-.cytotec-info p,
-.zymafluor-info p,
-.nicetile-tab-info p,
-.plavix-info p,
-.methergin-info p,
-.ultraproct-sup-info p,
-.ultraproct-ung-info p,
-.daivonex-ung-info p,
-.advantan-crema-info p,
-.crestor-info p{
-    margin-top: 0;
-}
-.zarontin-price,
-.colchicine-price,
-.iruxol-price,
-.cytotec-price,
-.zymafluor-price,
-.nicetile-tab-price,
-.plavix-price,
-.methergin-price,
-.ultraproct-sup-price,
-.ultraproct-ung-price,
-.daivonex-ung-price,
-.advantan-crema-price,
-.crestor-price{
-    max-width: 250px;
     display: inline-block;
 }
-.iruxol-info{
-    margin-bottom: 20px;
+.price-advantan{
+    padding-right: 20px;
 }
-.irux{
-    padding-top: 10px;
+.foto{
+    max-width: 500px;
+
 }
-.cyt{
-    padding-top: 20px;
-    max-width: 250px;
-    display:  inline-block;
+.main-price{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-.zym,
-.pol,
-.met{
-    max-width: 250px;
-    display:  inline-block;
+.phone-price{
+    text-decoration: none;
+    color: black;
+    display: block;
+}
+.phone-price:hover{
+    color: #0a5bd5;
+}
+.block{
+    display: block;
+    margin: 15px 0;
+}
+.price{
+    margin-top: 0;
+    padding-right: 10px;
+    display: inline-block;
+    font-size: 20px;
+    color: red;
+}
+.stock{
+    display: inline;
+    font-size: 14px;
+    color: #309508;
+}
+.main-info p,
+.main-info ul{
+    padding-left: 60px;
+}
+.main-info li{
+    padding-bottom: 10px;
+}
+.first{
+    list-style: none;
+}
+.prod{
+    font-size: 20px;
+    display: block;
+    padding-left: 60px;
+}
+.prod b{
+    position: relative;
+}
+.prod b::before{
+    position: absolute;
+    content: url(../img/italy.png);
+    bottom: -7px;
+    right: -28px;
 }
 footer{
     background-color: #ededf5;
@@ -362,9 +282,6 @@ footer{
         justify-content: space-around;
     }
 }
-@media screen and (max-width: 919px){
-    
-}
 @media screen and (max-width: 705px){
     .navigation{
         padding: 15px 15px 0 40px;
@@ -384,22 +301,37 @@ footer{
         padding-right: 60px;
     }
 }
+@media screen and (max-width: 521px){
+    .foto{
+        max-width: 400px;
+    }
+}
 @media screen and (max-width: 426px){
     .phone{
         padding: 15px 50px 10px 0;
     }
+    h1,
+    h2,
+    h3{
+        font-size: 20px;
+    }
+    .prod{
+        font-size: 18px;
+    }
     .tel::before {
         top: 20px;
     }
-    .zymafluor{
-        font-size: 14px;
+    .foto{
+        max-width: 260px;
     }
-    .methergin{
-        font-size: 14px;
+}
+@media screen and (max-width: 341px){
+    .prod{
+        padding-left: 33px;
     }
 }
 @media screen and (max-width: 321px){
-    .zymafluor{
-        font-size: 12px;
+    .stock{
+        display: inline-block;
     }
 }
