--- a/css/style-medics.css
+++ b/css/style-medics.css
@@ -236,7 +236,9 @@ hr{
 .ozodrop,
 .trittico,
 .bromazepam,
-.oki{
+.oki,
+.delorazepam,
+.nimesulide{
     margin-bottom: 20px;
     padding-left: 15px;
     border: 2px solid #9999a6;
@@ -281,7 +283,9 @@ hr{
 .ozodrop:hover,
 .trittico:hover,
 .bromazepam:hover,
-.oki:hover{
+.oki:hover,
+.delorazepam:hover,
+.nimesulide:hover{
     filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.15));
     border: 2px solid #3e6aff;
 }
@@ -325,7 +329,9 @@ hr{
 .ozodrop-info,
 .trittico-info,
 .bromazepam-info,
-.oki-info{
+.oki-info,
+.delorazepam-info,
+.nimesulide-info{
     max-width: 755px;
     display: inline-block;
     margin-right: 15px;
@@ -411,7 +417,11 @@ hr{
 .bromazepam-info,
 .bromazepam-price,
 .oki-info,
-.oki-price{
+.oki-price,
+.delorazepam-info,
+.delorazepam-price,
+.nimesulide-info,
+.nimesulide-price{
     color: black;
 }
 img{
@@ -457,7 +467,9 @@ img{
 .adenuric-info p,
 .trittico-info p,
 .bromazepam-info p,
-.oki-info p{
+.oki-info p,
+.delorazepam-info p,
+.nimesulide-info p{
     margin-top: 0;
 }
 .zarontin-price,
@@ -500,7 +512,9 @@ img{
 .ozodrop-price,
 .trittico-price,
 .bromazepam-price,
-.oki-price{
+.oki-price,
+.delorazepam-price,
+.nimesulide-price{
     max-width: 250px;
     display: inline-block;
 }
